# tcl-ticket-api

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_uvicorn.py
app/: __init__.py  config.py  main.py
app/api/: deps.py
app/api/v1/: auth.py  tickets.py
app/core/: __init__.py  decorators.py  error_handlers.py  exceptions.py  limiter.py  logging_config.py  request_context.py  security.py
app/db/: __init__.py  base.py  session.py
app/middleware/: request_id.py
app/models/: __init__.py  ticket.py
app/repositories/: __init__.py  ticket_repository.py
app/schemas/: __init__.py  common.py  ticket.py
app/services/: __init__.py  ticket_service.py
nginx/: nginx.conf
postman/: TCL-Ticket-API.postman_collection.json
sql/: ddl.sql  queries_reference.sql
tests/: conftest.py  test_tickets.py
